   Patch by spork.
 * Added a new switch for @command/add, /rsnoparse, which stops the rightside
   arguments (after the '=') from being evaluated. Also clarified the help
   to show that /noparse only affects leftside args. Suggested by spork. [MG]
 * WHO, DOING and SESSION now take wildcard patterns for names, as well as
   a prefix. [MG]

Functions:
 * lpids()' second argument has been altered slightly, to allow you to list
   the pids for one specific object only. Suggested by spork. [MG]
 * The "player" field in pidinfo() has been renamed to "executor", for
   clarity. "player" still works for backwards compatability. From a request
   by tsen. [MG]
 * stringsecs() can now handle the additional time periods that etime() can 
   return (years, weeks). [MG]
 * colors(..., name) is much more efficient. [SW]
 * alias(object,) clears object's @alias. Suggested by spork. [MG]
 * v(<integer>) is no longer the same as get(me/<integer>). Instead, it
   always the <integer>th stack entry. [MG] [Rhost] [MUX]
 * It's now documented that replace() can alter multiple words at once. 
   Reported by Jules. [MG]
 * Some terminfo() information can now be retrieved by mortals on other 
   players' connections. Suggested by spork. [MG]
 * Added a new option to colors() to include ansi underline, invert and 
   flash from the input in the output. [MG]
 * locate() takes a new flag, 's', which will only return objects
   controlled by the looker. Suggested by spork. [MG]
 * @@() now takes a huge number of arguments, instead of ignoring commas in
   the final arg, to stop it giving the 'unescaped comma' warning. Requested
   by everyone. [MG]

Minor changes:
 * ansi() now accepts a space-separated list of color codes, with later
   groups overriding earlier ones. Allows you to specify basic ANSI codes
   after XTERM color codes. Suggested by spork, [Rhost]. [MG]
 * Compiler warning fixed by ChaosMageX.
 * Help fixes by many, including spork, Wiggles and Bodin. [MG]