@@ -469,8 +469,12 @@ See also: control, TRUST
   This flag causes all accented characters to be converted to non-accented
   alternatives before being sent to a connection. See HELP STRIPACCENTS() 
   for caveats.
+  
+  To strip accents for a specific connection, instead of all connections,
+  you can use 
+    @sockset <descriptor>=stripaccents,yes
 
-See also: i18n, accent(), stripaccents()
+See also: i18n, accent(), stripaccents(), @sockset
 & NO_COMMAND
   Flag:  NO_COMMAND  (all types)
   
